# Beast-Core

./: CMakeLists.txt  README.md  build-all.bat
headers/: Qdrawable.h  Qsql.h  Qwindow.h  core_memory.hpp  core_window.hpp  system_app.hpp  system_event.hpp  system_video.hpp  types.h
resources/: test.txt
sandbox/: main.cpp  main_ex.cpp
sources/: Qdrawable.cpp  Qsql.cpp  Qwindow.cpp  core_memory.cpp  core_window.cpp  system_app.cpp
